--- a/mobile/templates/user_passport.html
+++ b/mobile/templates/user_passport.html
@@ -75,7 +75,7 @@
 					</select></td>
 			</tr>
 			<tr>
-				<td align="right" 
+				<td align="right" >
 			
 				<!-- {if $field.is_need} -->
 				id="passwd_quesetion"
@@ -89,7 +89,7 @@
 			</tr>
 			<!-- {else} -->
 			<tr>
-				<td align="right" 
+				<td align="right" >
 			
 				<!-- {if $field.is_need} -->
 				id="extend_field{$field.id}i"
