--- a/admin/templates/top.htm
+++ b/admin/templates/top.htm
@@ -187,7 +187,7 @@ var adminId = "{$admin_id}";
 </head>
 <body>
 <div id="header-div">
-  <div id="logo-div" style="bgcolor:#000000;"><img src="images/ecshop_logo.png" alt="BZB - power for e-commerce" /></div>
+  <div id="logo-div" style="bgcolor:#000000;"><img src="images/ecshop_logo.png" alt="商城 - power for e-commerce" /></div>
   <div id="license-div" style="bgcolor:#000000;"></div>
   <div id="submenu-div">
     <ul>
